complete simulation of a clarisse environment

--- a/simulation/Makefile
+++ b/simulation/Makefile
@@ -1,6 +1,7 @@
 CC = mpicc
-CFLAGS = -g -Wall -I.
-LDFLAGS =
+MPIEXEC = mpiexec
+CFLAGS = -g -Wall -I ../buffering -O0
+LDFLAGS = -lpthread
 EXEC = producer_consumer_decoupling
 
 
@@ -14,7 +15,12 @@ run:
 	BUFFERING_NUMBER_OF_PRODUCERS=4 \
     BUFFERING_NUMBER_OF_CONSUMERS=4 \
     BUFFERING_NUMBER_OF_SERVERS=1 \
-    mpiexec -n 9 ./$(EXEC)
+    $(MPIEXEC) -n 9 ./$(EXEC)
+debug:
+	BUFFERING_NUMBER_OF_PRODUCERS=1 \
+    BUFFERING_NUMBER_OF_CONSUMERS=1 \
+    BUFFERING_NUMBER_OF_SERVERS=1 \
+    $(MPIEXEC) -n 3 xterm -e gdb ./$(EXEC)
 
 
 clean:
