fix cls_buffering race

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -2,8 +2,9 @@ CC = mpicc
 CFLAGS = -g -Wall -I ../include -O0
 LDFLAGS = -L../bin/ -lpthread -lbuffering
 SIMULATION = ../simulation/producer_consumer_decoupling.c ../simulation/listener.c ../simulation/server.c
+EXEC = test_NM1_filetransfer1 test_NM1_filetransfer2_collective
 
-all: test_NM1_filetransfer1 test_NM1_filetransfer2_collective
+all: $(EXEC)
 
 test_NM1_filetransfer1: test_NM1_filetransfer1.c $(SIMULATION)
 	$(CC) $(CFLAGS) $^ -o $@ $(LDFLAGS)
