scheduler adjustment, tests added

--- a/buffering/tests/Makefile
+++ b/buffering/tests/Makefile
@@ -1,11 +1,14 @@
-CC = g++
+CC = clang++-3.6
 CFLAGS = -g -Wall -I ../../include -O0 -std=c++11
 LDFLAGS = -L../../bin/ -lpthread -lbuffering
-EXEC = test1
+EXEC = test1 test2
 
 all: $(EXEC)
 
 test1: test1.cpp
+	$(CC) $(CFLAGS) $^ -o $@ $(LDFLAGS)
+
+test2: test2.cpp
 	$(CC) $(CFLAGS) $^ -o $@ $(LDFLAGS)
 
 clean:
