--- a/buffering/tests/Makefile
+++ b/buffering/tests/Makefile
@@ -1,17 +1,17 @@
 CC = clang++-3.5
 CFLAGS = -g -Wall -I ../../include -std=c++14 -O3
 LDFLAGS = -L../../bin/ -lpthread -lbuffering -O3
-EXEC = test1 test2 test3
+EXEC = cpp_test1.bin cpp_test2.bin cpp_test3.bin
 
 all: $(EXEC)
 
-test1: test1.cpp
+cpp_test1.bin: cpp_test1.cpp
 	$(CC) $(CFLAGS) $^ -o $@ $(LDFLAGS)
 
-test2: test2.cpp
+cpp_test2.bin: cpp_test2.cpp
 	$(CC) $(CFLAGS) $^ -o $@ $(LDFLAGS)
 
-test3: test3.cpp
+cpp_test3.bin: cpp_test3.cpp
 	$(CC) $(CFLAGS) $^ -o $@ $(LDFLAGS)
 
 clean:
