fix bug in cls_release_buf, fix tests

--- a/buffering/tests/Makefile
+++ b/buffering/tests/Makefile
@@ -1,7 +1,7 @@
 CC = clang++-3.5
 CFLAGS = -g -Wall -I ../../include -std=c++14 -O3
 LDFLAGS = -L../../bin/ -lpthread -lbuffering -O3
-EXEC = cpp_test1.bin cpp_test2.bin cpp_test3.bin
+EXEC = cpp_test1.bin cpp_test2.bin cpp_test3.bin cpp_test4_vectorial.bin cpp_test5_noswap.bin
 
 all: $(EXEC)
 
