Makefiles and script

--- a/simulation/Makefile.ubuntu
+++ b/simulation/Makefile.ubuntu
@@ -1,7 +1,7 @@
-CC = cc
+CC = mpicc
 CFLAGS = -g -I ../include -O3 -Wno-unused-result 
 LDFLAGS =  -L../bin/ -lbuffering -Wl,-rpath,../bin -lpthread -lbuffering
-LDFLAGS += -dynamic  
+#LDFLAGS += -dynamic  
 SIMULATION = producer_consumer_decoupling.c listener.c
 EXEC = mpi_decoupled_filetransfer.bin mpi_p2p_filetransfer.bin mpi_alloc_ondemand_vs_async.bin mpi_ondemand_ideal_adaptive.bin
 
